GKE/Javascript/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  labels:
    app: react-frontend
spec:
  selector:
    app: react-frontend
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: LoadBalancer
